fix(award): fix spacing on texts on top and project description

--- a/app/assets/stylesheets/base/award.sass
+++ b/app/assets/stylesheets/base/award.sass
@@ -64,11 +64,14 @@
     float: left
     width: 33.33333333%
     border-left: 3px solid $green
-    padding-left: 55px
-    padding-right: 55px
-    min-height: 160px
+    padding-left: 50px
+    padding-right: 30px
+    min-height: 110px
     &:first-child
       border-left: 0
+      padding-left: 0
+    &:last-child
+      padding-right: 0
     h2
       +adjust-font-size-to(22px)
       color: $green
@@ -374,7 +377,6 @@
   width: 100%
   height: 1146px
   background: #78ebca url(/assets/award/bottom.jpg) center top no-repeat
-  // background: url(/assets/award/bottom.jpg) -258px top no-repeat
   position: relative
 
 
